Add explicit width to logo for compatibility

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="page-wrapper">
 
 		<header class="page-header">
-			<img src="img/site-logo.svg" alt="Logo">
+			<img src="img/site-logo.svg" alt="Logo" width="40">
 			<span class="page-title">MY TO-DO LIST</span>
 			<nav class="page-navigation">
 				<ul>
