Change nav links, and make dummy-data dump sort-focused

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 			<span class="page-title">MY TO-DO LIST</span>
 			<nav class="page-navigation">
 				<ul>
-					<li><a href="#home">Home</a></li>
-					<li><a href="#generate">Generate</a></li>
-					<li><a href="#contact">Contact</a></li>
+					<li><a href="#home">Reload</a></li>
+					<li><a href="#generate">Add Dummy To-Dos</a></li>
+					<li><a href="https://github.com/ericbutler555/todo-demo/" target="_blank" rel="noopener">GitHub Repo</a></li>
 				</ul>
 			</nav>
 		</header>
