--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>To-Do List | JavaScript demo by Eric Butler</title>
 	<link rel="stylesheet" href="styles.css">
-	<script defer src="scripts.js"></script>
+	<script defer src="scripts-es6.js"></script>
 </head>
 <body>
 	<div class="page-wrapper">
